# big-brother

./: .gitignore  ARCHITECTURE_DIAGRAM_PROMPT.md  DEMO_SCRIPT.md  GITHUB_PUSH_SUMMARY.md  OPTIMAL_CONFIG.md  PRESENTATION_OUTLINE.md  README.md  SIMPLE_ARCHITECTURE_DIAGRAM.md  SQL_IMPROVEMENT_GUIDE.md  TECHNICAL_BREAKDOWN.md  TECHNICAL_REPORT.md  benchmark_queries.py  demo_model_comparison.py  juan_productivity_analysis.py  pyproject.toml  test_better_agent.py  test_better_sql.py
docs/: dashboard.md  gemini.md  local_setup.md  overview.md  persistence_query.md  video_pipeline.md
outputs/adi_koul/: episodes.jsonl  events.jsonl  memory.db  summary.json  windows.jsonl
outputs/juan/: episodes.jsonl  events.jsonl  memory.db  summary.json  windows.jsonl
outputs/manas_eramilli/: episodes.jsonl  events.jsonl  memory.db  summary.json  windows.jsonl
outputs/manas_erramilli/: episodes.jsonl  events.jsonl  memory.db  summary.json  windows.jsonl
outputs/t1/: episodes.jsonl  events.jsonl  memory.db  summary.json  windows.jsonl
outputs/t2/: episodes.jsonl  events.jsonl  memory.db  summary.json  windows.jsonl
src/big_brother/: __init__.py  better_sql_agent.py  cli.py  episode.py  (+16 more)
src/big_brother.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_dashboard.py  test_episode.py  test_episode_labeler.py  test_episode_labeler_pipeline.py  test_gating.py  test_gemini_extractor.py  test_merge_episodes.py  test_nl_query.py  test_persistence.py  test_pipeline.py  test_query_api.py  test_query_cli.py  test_schema.py  test_video_pipeline.py
(+51 files in other folders)
